versioned_docs/version-2.13.0/core/tui.md
---
description: "Use the Zaparoo Core terminal UI to check Core status, write tokens, update media, change settings, and export logs."
keywords: [zaparoo tui, zaparoo terminal ui, zaparoo core settings, zaparoo logs]
---

# Terminal UI

The Zaparoo Core terminal UI, or TUI, is Core's local menu interface. Use it when you are on the device running Core and want to check status, write a token, update media, or change settings without opening the [Zaparoo App](../app/index.md), [Web UI](../app/web.md), or [command line](cli.md).

Windows does not use the TUI. It runs Core from the system tray instead.

## Opening the TUI

Start Core from the launcher, script, or executable documented for your platform. For example, MiSTer users open Zaparoo from the Scripts menu, and Batocera users open it from the Ports system in EmulationStation.

Use the relevant platform guide for install paths and startup behavior:

- [MiSTer FPGA](../platforms/mister/index.md)
- [Batocera](../platforms/batocera/index.md)
- [Linux](../platforms/linux/index.md)
- [RePlayOS](../platforms/replayos.md)

Service or daemon modes skip the TUI. See the [command line reference](cli.md) for platform flags.

## Main screen

The main screen shows the local Core service status, device IP address, Web UI address, connected reader status, and the most recent scanned token.

If the Core service is not running, most actions are disabled and the TUI tells you to check the logs.

Exiting the TUI may leave the Core service running in the background, depending on how Core was started on that platform.

## Main actions

| Action | What it does |
| ------ | ------------ |
| **Search media** | Searches indexed media and writes the selected result to a token. |
| **Custom write** | Writes custom [ZapScript](../zapscript/index.md) to a token. |
| **Update media** | Scans configured media folders and updates the media database. |
| **Settings** | Opens Core settings, TUI settings, reader settings, audio settings, and logs. |
| **Exit** | Closes the TUI. |

## Writing tokens

The TUI can write tokens from **Search media** or **Custom write**.

Search results use the TUI `write_format` setting:

- `zapscript` writes the ZapScript generated by Core. This is the default.
- `path` writes the media path directly.

Custom writes parse the ZapScript before writing and show an error for unknown command names.

## TUI settings

TUI-specific settings live in `tui.toml` next to `config.toml`. You can change them from **Settings** > **TUI**, or edit the file manually. See the [TUI config reference](config.md#tui-config-file) for the full list.

The TUI settings menu includes:

- `theme`
- `write_format`
- `mouse`
- `crt_mode`
- `on_screen_keyboard`

`crt_mode` and `on_screen_keyboard` default to `true` on MiSTer and MiSTeX, and `false` elsewhere.

## Logs

Open **Settings** > **Logs** to view recent Core log output, refresh the view, or upload the log for support.

Some platforms also show a **Copy** action that copies the log to a platform-specific location.
